RunThese24H.java SIGSEGV in JfrThreadGroup::thread_group_id

XMLWordPrintable

    • jfr
    • b27
    • x86_64
    • linux

        The following test failed in the JDK18 CI:

        applications/runthese/RunThese24H.java

        Here are snippets from the hs_err_pid file:

        # SIGSEGV (0xb) at pc=0x00007f9146e18ad0, pid=19322, tid=19373
        #
        # JRE version: Java(TM) SE Runtime Environment (18.0+21) (build 18-ea+21-1302)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (18-ea+21-1302, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0x4e7ad0] AccessInternal::PostRuntimeDispatch<G1BarrierSet::AccessBarrier<286822ul, G1BarrierSet>, (AccessInternal::BarrierType)3, 286822ul>::oop_access_barrier(oopDesc*, long)+0x0

        <snip>

        --------------- T H R E A D ---------------

        Current thread (0x00007f908c0728b0): JavaThread "JFR Recorder Thread" daemon [_thread_in_vm, id=19373, stack(0x00007f90d8ec9000,0x00007f90d8fca000)] _threads_hazard_ptr=0x00007f90dc1579d0

        Stack: [0x00007f90d8ec9000,0x00007f90d8fca000], sp=0x00007f90d8fc89c8, free space=1022k
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x4e7ad0] AccessInternal::PostRuntimeDispatch<G1BarrierSet::AccessBarrier<286822ul, G1BarrierSet>, (AccessInternal::BarrierType)3, 286822ul>::oop_access_barrier(oopDesc*, long)+0x0
        V [libjvm.so+0x8323fb] JfrThreadGroup::thread_group_id(JavaThread const*, Thread*)+0xbb
        V [libjvm.so+0x83ee2e] JfrThreadConstantSet::serialize(JfrCheckpointWriter&)+0x37e
        V [libjvm.so+0x8405c7] JfrTypeManager::write_threads(JfrCheckpointWriter&)+0x37
        V [libjvm.so+0x7ddfb7] JfrCheckpointManager::write_threads(JavaThread*)+0xb7
        V [libjvm.so+0x7df038] JfrCheckpointManager::write_static_type_set_and_threads()+0x58
        V [libjvm.so+0x822879] JfrRecorderService::rotate(int)+0x1b9
        V [libjvm.so+0x822dca] recorderthread_entry(JavaThread*, JavaThread*)+0x11a
        V [libjvm.so+0xd42dd2] JavaThread::thread_main_inner()+0xc2
        V [libjvm.so+0xd46cc0] Thread::call_run()+0xc0
        V [libjvm.so+0xbac8a1] thread_native_entry(Thread*)+0xe1


        siginfo: si_signo: 11 (SIGSEGV), si_code: 1 (SEGV_MAPERR), si_addr: 0x0000000000000038

              Assignee:
              Markus Grönlund
              Reporter:
              Daniel Daugherty
              Votes:
              0 Vote for this issue
              Watchers:
              10 Start watching this issue

                Created:
                Updated:
                Resolved: