8276125: RunThese24H.java SIGSEGV in JfrThreadGroup::thread_group_id

Reviewed-by: mgronlun
Backport-of: a885aab696777c99c8c4c5d9a46afc5fe0a4fe47